--- a/yeni/index.html
+++ b/yeni/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=
+    , initial-scale=1.0"
+    />
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-<header>
-<div class="wallet">Wallet </div>
-<div class="signUp">Sign Up</div>
-<div class="logIn">Log In</div>
+  <body>
+    <header>
+      <div class="wallet">Wallet</div>
+        <nav>
+            <div class="signUp">Sign Up</div>
+            <div class="logIn">Log In</div>
+        </nav>
+    </header>
 
-</header>
+    <div class="container">
+        <div class="leftArea">
+            <div>SaaS Landing Page Template</div>
+            <div class="getStarted"></div>
+        </div>
+        <div class="rightArea">
+            <div class="img1"></div>
+            <div class="img2"></div>
+            <div class="img3"></div>
+        </div>
+
+</div>
+      <footer><!--logolar eklenecek-->></footer>
     
-
-
-
-
-
-</body>
+  </body>
 </html>
